--- a/src/application/Level2.fxml
+++ b/src/application/Level2.fxml
@@ -16,13 +16,13 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="view" maxHeight="600.0" maxWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Level1Controller">
+<AnchorPane fx:id="view" maxHeight="600.0" maxWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Level2Controller">
    <children>
       <Group fx:id="groupMain">
          <children>
             <ImageView fitHeight="600.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../images/Level1_Back.png" />
+                  <Image url="@../images/Level2_Back.png" />
                </image>
             </ImageView>
             <Region prefHeight="91.0" prefWidth="800.0" style="-fx-background-color: RGBA(0,0,0,0.8);" />
@@ -61,9 +61,9 @@
                   <Font name="Cambria" size="22.0" />
                </font>
             </Label>
-            <ImageView fx:id="imgHandRight" fitHeight="124.0" fitWidth="96.0" layoutX="567.0" layoutY="164.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgLungs" fitHeight="93.0" fitWidth="85.0" layoutX="104.0" layoutY="464.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../images/Level1_Extremidad_Derecha.png" />
+                  <Image url="@../images/Level2_Lungs.png" />
                </image>
                <effect>
                   <DropShadow height="38.1" radius="14.275" spread="0.48">
@@ -73,9 +73,9 @@
                   </DropShadow>
                </effect>
             </ImageView>
-            <ImageView fx:id="imgHead" fitHeight="193.0" fitWidth="178.0" layoutX="98.0" layoutY="274.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgNoseMouth" fitHeight="78.0" fitWidth="72.0" layoutX="149.0" layoutY="289.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../images/Level_Head.png" />
+                  <Image url="@../images/Level2_Nose_and_.Mouth.png" />
                </image>
                <effect>
                   <DropShadow height="38.1" radius="14.275" spread="0.48">
@@ -85,45 +85,9 @@
                   </DropShadow>
                </effect>
             </ImageView>
-            <ImageView fx:id="imgHandLeft" fitHeight="124.0" fitWidth="96.0" layoutX="69.0" layoutY="443.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgTracheaLarinx" fitHeight="186.0" fitWidth="57.0" layoutX="638.0" layoutY="300.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../images/Level1_Extremidad_Izquierda.png" />
-               </image>
-               <effect>
-                  <DropShadow height="38.1" radius="14.275" spread="0.48">
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </DropShadow>
-               </effect>
-            </ImageView>
-            <ImageView fx:id="imgFooterRight" fitHeight="145.0" fitWidth="76.0" layoutX="525.0" layoutY="423.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/Level1_Extremidad_Inf_Derecha.png" />
-               </image>
-               <effect>
-                  <DropShadow height="38.1" radius="14.275" spread="0.48">
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </DropShadow>
-               </effect>
-            </ImageView>
-            <ImageView fx:id="imgFooterLeft" fitHeight="145.0" fitWidth="76.0" layoutX="158.0" layoutY="99.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/Level1_Extremidad_Inf_Izquierda.png" />
-               </image>
-               <effect>
-                  <DropShadow height="38.1" radius="14.275" spread="0.48">
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </DropShadow>
-               </effect>
-            </ImageView>
-            <ImageView fx:id="imgTrunk" fitHeight="145.0" fitWidth="76.0" layoutX="641.0" layoutY="331.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/trunk.png" />
+                  <Image url="@../images/Level2_Trachea_and_Larinx.png" />
                </image>
                <effect>
                   <DropShadow height="38.1" radius="14.275" spread="0.48">
@@ -253,7 +217,7 @@
                   </DropShadow>
                </effect>
             </Label>
-            <Button layoutX="172.0" layoutY="115.0" mnemonicParsing="false" onAction="#goNextLevel" text="Siguiente Nivel" />
+            <Button layoutX="172.0" layoutY="115.0" mnemonicParsing="false" text="Siguiente Nivel" />
          </children>
       </Group>
    </children>
