--- a/src/application/Level3.fxml
+++ b/src/application/Level3.fxml
@@ -16,13 +16,13 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="view" maxHeight="600.0" maxWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Level2Controller">
+<AnchorPane fx:id="view" maxHeight="600.0" maxWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Level3Controller">
    <children>
       <Group fx:id="groupMain">
          <children>
             <ImageView fitHeight="600.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../images/Level2_Back.png" />
+                  <Image url="@../images/Level3_Back.png" />
                </image>
             </ImageView>
             <Region prefHeight="91.0" prefWidth="800.0" style="-fx-background-color: RGBA(0,0,0,0.8);" />
@@ -61,9 +61,9 @@
                   <Font name="Cambria" size="22.0" />
                </font>
             </Label>
-            <ImageView fx:id="imgLungs" fitHeight="93.0" fitWidth="85.0" layoutX="104.0" layoutY="464.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgThroat" fitHeight="180.0" fitWidth="66.0" layoutX="704.0" layoutY="321.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../images/Level2_Lungs.png" />
+                  <Image url="@../images/Level3_Throat_Oesophagus_and_Stomach.png" />
                </image>
                <effect>
                   <DropShadow height="38.1" radius="14.275" spread="0.48">
@@ -73,9 +73,9 @@
                   </DropShadow>
                </effect>
             </ImageView>
-            <ImageView fx:id="imgNoseMouth" fitHeight="78.0" fitWidth="72.0" layoutX="149.0" layoutY="289.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgSmallIntestine" fitHeight="63.0" fitWidth="83.0" layoutX="47.0" layoutY="179.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../images/Level2_Nose_and_.Mouth.png" />
+                  <Image url="@../images/Level3_Small_Intestine.png" />
                </image>
                <effect>
                   <DropShadow height="38.1" radius="14.275" spread="0.48">
@@ -85,9 +85,33 @@
                   </DropShadow>
                </effect>
             </ImageView>
-            <ImageView fx:id="imgTracheaLarinx" fitHeight="186.0" fitWidth="57.0" layoutX="638.0" layoutY="300.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgLargeIntestine" fitHeight="81.0" fitWidth="97.0" layoutX="626.0" layoutY="152.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../images/Level2_Trachea_and_Larinx.png" />
+                  <Image url="@../images/Level3_Large_Intestine.png" />
+               </image>
+               <effect>
+                  <DropShadow height="38.1" radius="14.275" spread="0.48">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </DropShadow>
+               </effect>
+            </ImageView>
+            <ImageView fx:id="imgLiver" fitHeight="50.0" fitWidth="53.0" layoutX="173.0" layoutY="457.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/Level3_Liver.png" />
+               </image>
+               <effect>
+                  <DropShadow height="38.1" radius="14.275" spread="0.48">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </DropShadow>
+               </effect>
+            </ImageView>
+            <ImageView fx:id="imgMouth" fitHeight="47.0" fitWidth="70.0" layoutX="118.0" layoutY="279.0" onMouseReleased="#validatePosition" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/Level3_Mouth.png" />
                </image>
                <effect>
                   <DropShadow height="38.1" radius="14.275" spread="0.48">
@@ -217,7 +241,7 @@
                   </DropShadow>
                </effect>
             </Label>
-            <Button layoutX="172.0" layoutY="115.0" mnemonicParsing="false" onAction="#goNextLevel" text="Siguiente Nivel" />
+            <Button layoutX="172.0" layoutY="115.0" mnemonicParsing="false" text="Siguiente Nivel" />
          </children>
       </Group>
    </children>
