--- a/src/application/HomeView.fxml
+++ b/src/application/HomeView.fxml
@@ -54,7 +54,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button contentDisplay="GRAPHIC_ONLY" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="56.0" style="-fx-background-color: transparent;" text="Help">
+      <Button contentDisplay="GRAPHIC_ONLY" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#muteBgSound" prefHeight="56.0" prefWidth="56.0" style="-fx-background-color: transparent;" text="Help">
          <graphic>
             <ImageView pickOnBounds="true" preserveRatio="true">
                <image>
