--- a/src/application/Level4.fxml
+++ b/src/application/Level4.fxml
@@ -41,7 +41,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Label fx:id="lbPoints" layoutX="716.0" prefHeight="25.0" prefWidth="70.0" text="000" textFill="WHITE">
+            <Label fx:id="lbPoints" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="690.0" layoutY="1.0" prefHeight="52.0" prefWidth="100.0" text="0000" textFill="WHITE">
                <font>
                   <Font name="Cambria" size="42.0" />
                </font>
